added documentation link

--- a/README
+++ b/README
@@ -25,6 +25,8 @@ Contributing
 Feel free to improve the code of the game. Either you can modify the code (as
 stated in the license) or you can suggest improvements by whatever means.
 
+You can also get the official documentation of the game from http://doc.condottierigame.net.
+
 Game rules
 ----------
 
