--- a/machiavelli/locale/es/LC_MESSAGES/django.po
+++ b/machiavelli/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-03-27 21:15+0200\n"
+"POT-Creation-Date: 2011-03-29 19:33+0200\n"
 "PO-Revision-Date: 2010-03-07 10:35+0100\n"
 "Last-Translator: José Antonio Martín <jantonio.martin@gmail.com>\n"
 "Language-Team: ES <LL@li.org>\n"
@@ -815,36 +815,32 @@ msgstr "has sido derrocado"
 msgid "you have overthrown a government"
 msgstr "has derrocado a un gobierno"
 
-#: templates/machiavelli/base.html:12 templates/machiavelli/faq.html:5
-msgid "FAQ"
-msgstr "FAQ"
-
-#: templates/machiavelli/base.html:13
+#: templates/machiavelli/base.html:12
 msgid "empty-map_en.jpg"
 msgstr "empty-map_es.jpg"
 
-#: templates/machiavelli/base.html:13
+#: templates/machiavelli/base.html:12
 #: templates/machiavelli/game_results.html:33
 msgid "Map"
 msgstr "Mapa"
 
-#: templates/machiavelli/base.html:14 templates/machiavelli/game_form.html:10
+#: templates/machiavelli/base.html:13 templates/machiavelli/game_form.html:10
 #: templates/machiavelli/summary.html:103
 #: templates/machiavelli/summary.html:197
 msgid "New game"
 msgstr "Nuevo juego"
 
-#: templates/machiavelli/base.html:15
+#: templates/machiavelli/base.html:14
 msgid "All games"
 msgstr "Todos los juegos"
 
-#: templates/machiavelli/base.html:16
+#: templates/machiavelli/base.html:15
 #: templates/machiavelli/hall_of_fame.html:6
 #: templates/machiavelli/hall_of_fame.html:9
 msgid "Hall of Fame"
 msgstr "Salón de la Fama"
 
-#: templates/machiavelli/base.html:17
+#: templates/machiavelli/base.html:16
 #: templates/machiavelli/scenario_list.html:5
 #: templates/machiavelli/scenario_list.html:8
 msgid "Scenarios"
@@ -861,8 +857,9 @@ msgid ""
 "You may expend some of your ducats to affect an area or a unit in different "
 "ways. Expenses take effect just before the conflicts resolution."
 msgstr ""
-"Puedes gastar algunos de tus ducados para afectar a un área o unidad de diferentes "
-"formas. Los gastos tienen efecto justo antes de la resolución de conflictos."
+"Puedes gastar algunos de tus ducados para afectar a un área o unidad de "
+"diferentes formas. Los gastos tienen efecto justo antes de la resolución de "
+"conflictos."
 
 #: templates/machiavelli/expenses_actions.html:9
 msgid ""
@@ -873,12 +870,12 @@ msgid ""
 "one bribe only the best paid is applied, and the money for the others is "
 "wasted."
 msgstr ""
-"Algunos de los gastos son 'sobornos'. Solo puedes sobornar a una unidad que esté "
-"adyacente a una de tus provincias controladas o a una de tus unidades. Observa "
-"que los sobornos pueden ser contrarrestados, y que puedes pagar más dinero para hacer "
-"el soborno más difícil de evitar. Además, si una unidad es afectada por más de "
-"un soborno solo se aplicará el mejor pagado, y el dinero de los otros sobornos "
-"se pierde."
+"Algunos de los gastos son 'sobornos'. Solo puedes sobornar a una unidad que "
+"esté adyacente a una de tus provincias controladas o a una de tus unidades. "
+"Observa que los sobornos pueden ser contrarrestados, y que puedes pagar más "
+"dinero para hacer el soborno más difícil de evitar. Además, si una unidad es "
+"afectada por más de un soborno solo se aplicará el mejor pagado, y el dinero "
+"de los otros sobornos se pierde."
 
 #: templates/machiavelli/expenses_actions.html:10
 msgid "Available expenses"
@@ -937,6 +934,10 @@ msgstr "Tus gastos para este turno"
 #: templates/machiavelli/turn_log_list.html:46
 msgid "Return to game"
 msgstr "Volver al juego"
+
+#: templates/machiavelli/faq.html:5
+msgid "FAQ"
+msgstr "FAQ"
 
 #: templates/machiavelli/faq.html:8
 msgid "Frequently Asked Questions"
@@ -1255,7 +1256,7 @@ msgid "Cities"
 msgstr "Ciudades"
 
 #: templates/machiavelli/game_results.html:31
-#: templates/machiavelli/show_game.html:138
+#: templates/machiavelli/show_game.html:140
 msgid "Campaign log"
 msgstr "Diario de campaña"
 
@@ -1270,17 +1271,18 @@ msgid ""
 "repayment, you have to trust in the borrower. There is no penalty for "
 "players who don't pay their loans."
 msgstr ""
-"Puedes regalar o prestar ducados a otros jugadores, e incluso puedes pedir un "
-"interés o cualquier otra compensación. Observa, sin embargo, que si quieres recuperar "
-"el dinero, tendrás que confiar en el deudor. No hay ninguna penalización para "
-"los jugadores que no pagan sus préstamos."
+"Puedes regalar o prestar ducados a otros jugadores, e incluso puedes pedir "
+"un interés o cualquier otra compensación. Observa, sin embargo, que si "
+"quieres recuperar el dinero, tendrás que confiar en el deudor. No hay "
+"ninguna penalización para los jugadores que no pagan sus préstamos."
 
 #: templates/machiavelli/give_money.html:9
 #, python-format
 msgid ""
 "Please, enter the number of ducats that you want to give to %(borrower)s."
 msgstr ""
-"Por favor, introduce el número de ducados que quieres entregar a %(borrower)s."
+"Por favor, introduce el número de ducados que quieres entregar a "
+"%(borrower)s."
 
 #: templates/machiavelli/give_money.html:15
 #: templates/machiavelli/orders_actions.html:25
@@ -1619,6 +1621,10 @@ msgstr "Ingreso doble"
 msgid "Autonomous garrisons"
 msgstr "Guarniciones autónomas"
 
+#: templates/machiavelli/scenario_detail.html:56
+msgid "Cities that give additional income"
+msgstr "Ciudades que proporcionan ingresos adicionales"
+
 #: templates/machiavelli/scenario_list.html:15
 msgid "Scores"
 msgstr "Puntuaciones"
@@ -1640,27 +1646,27 @@ msgstr "Ciudades:"
 msgid "Units:"
 msgstr "Unidades:"
 
-#: templates/machiavelli/show_game.html:95
+#: templates/machiavelli/show_game.html:96
 msgid "Send message"
 msgstr "Enviar carta"
 
-#: templates/machiavelli/show_game.html:99
-msgid "Excommunicate"
-msgstr "Excomulgar"
-
-#: templates/machiavelli/show_game.html:103
+#: templates/machiavelli/show_game.html:98
 msgid "Give money"
 msgstr "Enviar dinero"
 
-#: templates/machiavelli/show_game.html:112
+#: templates/machiavelli/show_game.html:104
+msgid "Excommunicate"
+msgstr "Excomulgar"
+
+#: templates/machiavelli/show_game.html:114
 msgid "Forgive excommunications"
 msgstr "Perdonar excomuniones"
 
-#: templates/machiavelli/show_game.html:117
+#: templates/machiavelli/show_game.html:119
 msgid "Current players"
 msgstr "Jugadores actuales"
 
-#: templates/machiavelli/show_game.html:130
+#: templates/machiavelli/show_game.html:132
 msgid ""
 "Our cartographers are drawing a new map for you. Please, reload\n"
 "the page in a few seconds."
@@ -1668,11 +1674,11 @@ msgstr ""
 "Nuestros cartógrafos están dibujando un nuevo mapa. Por favor, recarga la "
 "página dentro de unos segundos."
 
-#: templates/machiavelli/show_game.html:146
+#: templates/machiavelli/show_game.html:148
 msgid "See all"
 msgstr "Ver todo"
 
-#: templates/machiavelli/show_game.html:147
+#: templates/machiavelli/show_game.html:149
 msgid "Process"
 msgstr "Proceso"
 
@@ -1808,8 +1814,8 @@ msgstr ""
 "\n"
 "%(message)s\n"
 "\n"
-"Para ver otros avisos o cambiar la forma en la que recibes las notificaciones, por favor ve a "
-"%(notices_url)s.\n"
+"Para ver otros avisos o cambiar la forma en la que recibes las "
+"notificaciones, por favor ve a %(notices_url)s.\n"
 
 #: templates/notification/game_over/full.txt:3
 #, python-format
@@ -1923,23 +1929,20 @@ msgid ""
 "for not playing this game."
 msgstr ""
 "Si no quieres jugar a este juego, es mejor que\n"
-"dejes al otro jugador tomar tu país. De esta forma no perderás más "
-"karma\n"
+"dejes al otro jugador tomar tu país. De esta forma no perderás más karma\n"
 "por no jugar en ese juego."
 
 #: templates/notification/received_ducats/full.txt:3
 #, python-format
 msgid ""
 "You have received %(ducats)s ducats from %(country)s in the game '%(slug)s'"
-msgstr ""
-"Has recibido %(ducats)s ducados de %(country)s en el juego '%(slug)s'"
+msgstr "Has recibido %(ducats)s ducados de %(country)s en el juego '%(slug)s'"
 
 #: templates/notification/received_ducats/notice.html:3
 #, python-format
 msgid ""
 "You have received %(ducats)s ducats from %(country)s in the game '%(slug)s'."
-msgstr ""
-"Has recibido %(ducats)s ducados de %(country)s en el juego '%(slug)s'."
+msgstr "Has recibido %(ducats)s ducados de %(country)s en el juego '%(slug)s'."
 
 #~ msgid "You cannot send letters in an inactive game."
 #~ msgstr "No puedes enviar cartas en un juego inactivo."
